# TopASIG

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Readme.md  Tasks.md  docker-compose-services.yaml  docker-compose-test.yaml  docker-compose.yaml  docker-entrypoint.sh  gunicorn.conf.py  pyproject.toml  test_insert_image.py
apps/common/: urls.py  views.py
apps/ensurance/: admin.py  apps.py  constants.py  donaris.py  helpers.py  models.py  rca.py  serializers.py  tasks.py  urls.py  views.py
apps/ensurance/migrations/: 0001_initial.py  0002_alter_document_file.py  0003_file_delete_document.py  0004_file_name.py  0005_rcacompany.py  0006_alter_file_options_alter_rcacompany_options.py  0007_rcacompany_is_public.py  0008_medicalinsurancecompany.py  0009_alter_file_unique_together.py  0010_file_data.py
apps/payment/: admin.py  constants.py  helpers.py  maib_ecommerce.py  mia_maib.py  mia_victoria.py  models.py  qr.py  serializers.py  tasks.py  urls.py  victoria.py  views.py
apps/payment/migrations/: 0001_initial.py  0002_alter_qrcode_qr_as_image.py  0003_alter_qrcode_status.py  0004_qrcode_is_used.py  0005_alter_qrcode_is_used.py  0006_alter_qrcode_qr_as_image.py  0007_rename_qr_type_qrcode_type_remove_qrcode_qr_as_image_and_more.py  0008_alter_qrcode_options.py  0009_qrcode_order_id.py  0010_alter_qrcode_type.py  0011_qrcode_data.py  0012_maibpayment.py  0013_remove_maibpayment_order_id_and_more.py  0014_remove_maibpayment_uuid.py  0015_remove_maibpayment_file.py  0016_maibpayment_is_used.py
config/: celery.py  settings.py  urls.py
(+3 files in other folders)
